--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -27,6 +27,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-      - name: Parse the string table
+      - name: Validate the stringtables
         run: |
           python _stringtables.py
